<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AuthenticatorActivity"
    tools:showIn="@layout/activity_authenticator">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/account_path_group"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/account_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="100dp"
                />

            <Button
                android:id="@+id/account_path_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-100dp"
                android:text="@string/account_path_selector" />

        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_below="@+id/account_path_group"
            android:id="@+id/account_name_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/account_name_input"
                android:maxLines="1"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_name_input"
                />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/account_name_instructions"
            android:layout_below="@id/account_name_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_name_instructions"
            />

        <LinearLayout
            android:baselineAligned="true"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/account_cancel"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:text="@string/account_cancel" />

            <Button
                android:id="@+id/account_confirm"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:enabled="false"

                android:text="@string/account_confirm" />

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>